# dugs_simulation_examples

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  authors.html  changelog.html  contributing.html  environment.yml  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: doc-build.yml  python-app.yml
_sources/api/: dugs_simulation_examples.rst  modules.rst
api/: dugs_simulation_examples.html  modules.html
docs/: conf.py  index.rst  readme.rst
src/dugs_simulation_examples/: base.py  check_density.py  generate_models.py  get_pressure_temperature.py  model.py  peclet_number.py  run_obl_resolution.py  run_serial_layers.py  run_serial_resolution.py  skeleton.py  xarray_api.py
tests/: conftest.py  test_generate_models.py  test_skeleton.py
